--- a/css/style.css
+++ b/css/style.css
@@ -384,6 +384,9 @@ object {
   opacity: 1;
   right: 0;
 }
+.unseen{
+    visibility: hidden;
+}
 /*++++++++++++++++++++++Typography++++++++++++++++++++++++++*/
 
 h1 {
@@ -392,10 +395,12 @@ h1 {
   color: white;
   font-size: 2.441em;
 }
+
 h2 {
   text-align: center;
   color: white;
   font-size: 1.953em;
+    padding-bottom: 2%
 }
 h3 {
   text-align: center;
